fix footer overlapping with header

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,11 @@ main {
   height: 25em;
 }
 
+main {
+  margin-top: 5rem;
+  margin-bottom: 12rem;
+}
+
 .current-data p {
   padding: 0.25rem 0;
 }
@@ -261,10 +266,6 @@ footer p {
   .search-bar {
     margin-left: 7rem;
   }
-
-  .weather-card {
-    margin-top: 5rem;
-  }
 }
 
 @media screen and (max-width: 1000px) {
@@ -277,21 +278,10 @@ footer p {
     margin-left: 7rem;
   }
 
-  /* current-data section styles */
-  .current-data {
-    display: flex;
-  }
-
-  /* weather card styles */
-  .weather-card {
-    margin-top: 7rem;
-  }
-
   /* footer styles */
   footer {
     display: flex;
     flex-direction: column;
-    position: relative
   }
 }
 
@@ -304,7 +294,6 @@ footer p {
   .navbar a {
     margin-top: 2rem;
   }
-
 }
 
 @media screen and (max-width: 588px) {
@@ -334,11 +323,6 @@ footer p {
     margin-left: 7rem;
   }
 
-  /* current data section styles */
-  .current-data {
-    display: flex;
-  }
-
   /* footer styles */
   footer {
     position: relative;
@@ -350,7 +334,7 @@ footer p {
     width: 20rem;
     display: flex;
     flex-direction: column;
-    margin-top: 6rem;
+    margin-top: 10rem;
     margin-bottom: 2rem;
   }
 
@@ -365,4 +349,5 @@ footer p {
   .weather-card .temp {
     font-size: 2rem;
   }
+
 }
